--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,12 +6,14 @@
 .btn {
     margin: 45px;
 }
+
 .row {
     display: flex;
 }
+
 .block_left {
     background-color: green;
-
+    order: -1;
 }
 
 .block_middle {
@@ -21,7 +23,11 @@
 
 .block_right {
     background-color: black;
-    order: 3;
+    order: 3; 
+}
+
+.block_order {
+    order: 1;
 }
 
 .modal {
